--- a/docs/dcc-handbook.tex
+++ b/docs/dcc-handbook.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-12-06}
+    \date{2019-12-08}
 
 \usepackage{booktabs}
 
@@ -907,15 +907,48 @@ OUSD_not_found_aliases <- list(
   \end{itemize}
 \end{enumerate}
 
-\hypertarget{datamanagement}{%
-\chapter{Data Management}\label{datamanagement}}
+\hypertarget{datawrangling}{%
+\chapter{Data Wrangling}\label{datawrangling}}
 
 \emph{Contributors: Kunal Mishra, Jade Benjamin-Chung, Ben Arnold}
 
 2019-10-10: THIS CHAPTER IS A WORK IN PROGRESS (INCOMPLETE)
 
+\hypertarget{overview}{%
+\section{Overview}\label{overview}}
+
+Processing data from raw inputs to final data for analysis is the foundation of the data science \protect\hyperlink{workflows}{workflow}. ``Management'' is a bad word in both academia and hip parts of the private sector, so what used to be called ``data management'' is now called ``data wrangling'' or ``data munging''.
+
+By any name, it is by far the most tedious and time consuming step in the data analysis workflow. Data wrangling is also the most error prone. Errors are likely because data processing usually requires hundreds or thousands of lines of code. Generating final datasets often requires programmers to merge and append multiple different raw datasets; often, the process requires them to re-shape the data from wide format to long format.
+
+Read the chapters on \href{https://r4ds.had.co.nz/}{Data Wrangling} in \emph{R for Data Science}. That book covers the foundational skills and know-how.
+
+Here, we provide some additional recommendations for best practices related to data wrangling and highlight a few topics not covered in the excellent R for Data Science book.
+
+\hypertarget{cardinal-rule}{%
+\section{Cardinal rule}\label{cardinal-rule}}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+\begin{quote}
+\emph{\textbf{Cardinal rule of data wrangling:} NEVER alter untouched datasets}
+\end{quote}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+Untouched datasets include data output from data collection software, distributed by the data team, outside collaborators, or downloaded from a data repository. They should be left untouched. All data cleaning and processing activities should read in untouched data and output either temporary files or final datasets. Never, ever overwrite an untouched dataset.
+
 \hypertarget{data-inputoutput-io}{%
 \section{Data input/output (I/O)}\label{data-inputoutput-io}}
+
+Read the \href{https://r4ds.had.co.nz/data-import.html}{Data Import} section of \emph{R for Data Science}.
+
+\hypertarget{excel-files}{%
+\subsection{Excel files}\label{excel-files}}
+
+Often collaborators share data as Excel files (\texttt{.xlsx}). In this case, we recommend making a copy of the file in the untouched repository and converting it into a \texttt{.csv} file (one per tab) to input into the data processing workflow.
+
+This step should mark the end of your use of Excel in your data analysis, aside from inspecting \texttt{.csv} files. Excel is extremely error prone because it does not have good fidelity with variable types (e.g., dates, leading zeros), and has no real programmatic interface (VBA?). Avoid it. We can find no compelling case for its use in data science.
 
 \hypertarget{rds-vs-.rdata-files}{%
 \subsection{\texorpdfstring{\texttt{.RDS} vs \texttt{.RData} Files}{.RDS vs .RData Files}}\label{rds-vs-.rdata-files}}
@@ -937,7 +970,7 @@ Once again, the \texttt{readr} package as part of the Tidvyerse is great, with a
 \hypertarget{publishing-public-data}{%
 \subsection{Publishing public data}\label{publishing-public-data}}
 
-\textbf{NEVER} push a dataset into the public domain (e.g., GitHub, OSF) without first checking with Ben to ensure that it is appropriately de-identified and we have approval from the sponsor and/or human subjects review board to do so.
+\textbf{NEVER} push a dataset into the public domain (e.g., GitHub, OSF) without first checking with Ben to ensure that it is appropriately de-identified and we have approval from the sponsor and/or human subjects review board to do so. For example, we will need to re-code participant IDs (even if they contain no identifying information) before making data public to completely break the link between IDs and identifiable information stored on our servers.
 
 If you are releasing data into the public domain, then consider making available \emph{at minimum} a \texttt{.csv} file and a codebook of the same name (note: you should have a codebook for internal data as well). We often also make available \texttt{.rds} files as well. For example, your \texttt{mystudy/data/public} directory could include three files for a single dataset, two with the actual data in \texttt{.rds} and \texttt{.csv} formats, and a third that describes their contents:
 
@@ -949,16 +982,105 @@ analysis_data_public_codebook.txt
 
 In general, datasets are usually too big to save on GitHub, but occasionally they are small. Here is an example of where we actually pushed the data directly to GitHub: \url{https://github.com/ben-arnold/enterics-seroepi/tree/master/data} .
 
-If the data are bigger, then maintaining them under version control in your git repository can be unweildy. Instead, we recommend using another stable repository that has version control, such as the Open Science Framework (\href{https://osf.io}{osf.io}). For example, all of the data from the WASH Benefits trials (led by investigators at Berkeley, icddr,b, IPA-Kenya and others) are all stored through data components nested within in OSF projects: \url{https://osf.io/tprw2/}.
+If the data are bigger, then maintaining them under version control in your git repository can be unweildy. Instead, we recommend using another stable repository that has version control, such as the Open Science Framework (\href{https://osf.io}{osf.io}). For example, all of the data from the WASH Benefits trials (led by investigators at Berkeley, icddr,b, IPA-Kenya and others) are all stored through data components nested within in OSF projects: \url{https://osf.io/tprw2/}. Another good option is Dryad (\href{https://datadryad.org/}{datadryad.org}), which normally costs a nominal fee to archive data but is free to investigators in the University of California system.
+
+As of this time, we recommend cross-linking public files in GitHub (scripts/notebooks only), OSF, and Dryad.
 
 \hypertarget{documenting-datasets}{%
 \section{Documenting datasets}\label{documenting-datasets}}
 
 Datasets need to have metadata (documentation) associated with them to help people understand them. Well documented datasets save an enormous amount of time because it helps avoid lots of back-and-forth with new people orienting themselves with the data. This applies to both private and public data used in your work flow.
 
-Each final dataset should include a codebook. The file \href{https://github.com/ben-arnold/enterics-seroepi/blob/master/data/asembo_analysis_codebook.txt}{asembo\_analysis\_codebook.txt} provides one example of what a codebook for a simple dataset could contain.
+Each raw and final dataset should include a codebook. Sometimes survey instruments or electronic data capture schematics can stand-in for raw dataset codebooks, as long as that information is stored alongside the raw data!
+
+The file \href{https://github.com/ben-arnold/enterics-seroepi/blob/master/data/asembo_analysis_codebook.txt}{asembo\_analysis\_codebook.txt} provides one example of what a codebook for a simple, final dataset could contain.
 
 For complex studies with multiple, relational data files, it is exceptionally helpful to also include a README overview in plain text or markdown that explains the relationships between the datasets. Here is an example from the WASH Benefits Bangladesh trial primary outcomes analysis: \href{https://osf.io/v3nfs/}{README-WBB-primary-outcomes-datasets.md}.
+
+\hypertarget{mapping-data-from-untouched---final}{%
+\section{Mapping data from untouched -\textgreater{} final}\label{mapping-data-from-untouched---final}}
+
+An important step for the data processing is to come up with a plan for which final datasets you want to create.
+
+Best pracice is to scope out the flow of data from the original forms/modules/tables at the time of data capture to the final datasets planned for the analysis, and ensure that there is a \texttt{Key} linking each table needed to create the final analysis datasets.
+
+These are probably the two most common models for the end product:
+
+\begin{longtable}[]{@{}ll@{}}
+\toprule
+\endhead
+\begin{minipage}[t]{0.18\columnwidth}\raggedright
+Single Massive Dataset\strut
+\end{minipage} & \begin{minipage}[t]{0.76\columnwidth}\raggedright
+A single, large, final dataset for the whole project with potentially multiple levels of data (e.g., household, individual) and hundreds or thousands of variables.\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.18\columnwidth}\raggedright
+Multiple Relational datasets\strut
+\end{minipage} & \begin{minipage}[t]{0.76\columnwidth}\raggedright
+Multiple relational datasets, each tailored to a specific type of data collected in the study. Smaller, relational datasets can be recombined as needed for analyses.\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+We strongly recommend using the second model, relational data tables, in almost every case. The chapter on \href{https://r4ds.had.co.nz/relational-data.html}{Relational Data} in R for Data Science explains details.
+
+\begin{quote}
+Rationale: If you create a single massive dataset that includes information at multiple levels, then it can create challenges. First, the datasets are unwieldy, often consisting of hundreds or thousands of variables; this makes it difficult to find variables, difficult to view the data through a software browser, and easy to forget about variables. \emph{But there are bigger problems}. Datasets with an exceptionally large number of variables or multiple levels of data in the same file make it difficult to visually detect pathological problems in the data (e.g., unexpected missing values). For studies that include data from multiple levels (e.g., communities, households, individuals) the inclusion of multiple types of data in the same file makes analyses error prone because it requires the programmer to keep track of when variables include duplicated observations. For example, the inclusion of household characteristics in an individual-level data file means that if there are multiple individuals per household, that simple means of household characteristics cannot be calculated without first restricting the file to unique observations at the household level.
+\end{quote}
+
+\hypertarget{relational-data}{%
+\section{Relational data}\label{relational-data}}
+
+Again, please refer to \href{https://r4ds.had.co.nz/relational-data.html}{Relational Data} in R for Data Science for a good example of what this can look like.
+
+\textbf{Important}: For a set of relational tables to work, you must ensure that each table relates to another with a unique \texttt{Key}. For example, a child-level dataset must also include IDs for household- or cluster to be merged to household or cluster level data.
+
+Practical advice on \texttt{Key} variables / IDs used to link datasets. Numeric IDs can occasionally cause problems with merges due to machine rounding errors so character values can sometimes be a good alternative. Whatever format you use, ensure that they do not in some way encode identifying information (e.g., using a social security number or medical record number would be a poor choice of ID for a final dataset).
+
+\hypertarget{reshaping-data}{%
+\section{Reshaping data}\label{reshaping-data}}
+
+The \texttt{dplyr} package introduced the \texttt{pivot\_wider} and \texttt{pivot\_longer} functions in 2019. They make reshaping data dramatically easier than any previous functions, including \texttt{reshape()} (base R) or \texttt{gather}/\texttt{spread} (Tidyverse). This excellent article includes details:
+
+\url{https://tidyr.tidyverse.org/dev/articles/pivot.html}
+
+\hypertarget{data-cleaning}{%
+\section{Data cleaning}\label{data-cleaning}}
+
+Data cleaning is typically an iterative process that you should conduct on a variable-by-variable basis. Occasionally it is useful to clean an entire questionnaire module at the same time since variables in the same module can be related to one another, and since it can help to proceed through the cleaning process in well-defined chunks. I find it helpful to have a copy of the survey questionnaire (if relevant) handy while cleaning specific variables. This enables you to check skip patterns and codes in the survey against the dataset. We don't have a lot of general advice for data cleaning except the following. First, there is something to be said for ``trolling'' (in the fishing sense) through parts of the dataset to see what the data look like and to make sure you have a feel for how information is stored in different variables (e.g., are missing values coded or simply recored as ``\texttt{.}'' or \texttt{NA}). Second, it can be helpful to consolidate all data cleaning into a single program for each dataset. The data cleaning program corrects entry errors, labels variables, formats variables, and outputs either a temporary or final dataset (but does not, ever, overwrite the untouched data).
+
+\hypertarget{be-careful-with-joins-merges}{%
+\section{Be careful with joins / merges}\label{be-careful-with-joins-merges}}
+
+Experience shows that merging datasets is one of the most error prone steps in data wrangling. Merges can be particularly tricky for less experienced programmers. Errors are likely early in the data processing work flow, and less likely when merging final datasets with clean key variables (IDs) and clear relationships between datasets. Carefully check each merge to ensure it is working as you expect.
+
+In the Stata software there is a really nice feature with \texttt{merge} that allows you to specify the type of merge/join and then examine the diagnostics of that merge.
+
+Although R does not have a similarly nice feature at this time, the different \texttt{join} functions in the \texttt{dplyr} package provide all of the tools you need to correctly join your data.
+
+In our experience, the two most common types of joins in our work are mutating joins and filtering joints. (from the \emph{R for Data Science} book):
+
+\begin{quote}
+\textbf{Mutating joins}: add new variables to one data frame from matching observations in another.
+\end{quote}
+
+\begin{quote}
+\textbf{Filtering joins}: filter observations from one data frame based on whether or not they match an observation in the other table.
+\end{quote}
+
+Familiarize yourself with these types of operations. The \href{https://r4ds.had.co.nz/relational-data.html}{Relational data} chapter of \emph{R for Data Science} includes details.
+
+These operations can be tricky if the datasets include different resolutions of data and it is not necessarily a 1:1 merge. Two tips:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Always check the dimensions of your data.frames before and after a join to ensure the join is working as you expect.
+\item
+  If working in \href{https://rstudio.com/}{RStudio} (recommended), always inpect the joined/merged data with \texttt{View()} to ensure that the joined data look as you expect.
+\end{enumerate}
+
+These are by no means fool-proof, but they can help diagnose problems with joins.
 
 \hypertarget{github}{%
 \chapter{GitHub and Version Control}\label{github}}
