--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a handbook to help summarize best practices in data science among team members at the Francis I. Proctor Foundation. The output format for this example is bookdown::gitbook."
+description: "This is a handbook to help summarize best practices in data science among team members at the Francis I. Proctor Foundation."
 ---
 
 
